--- a/css/edit.css
+++ b/css/edit.css
@@ -1,5 +1,6 @@
 ::-webkit-scrollbar {
-    width:16px
+    width:16px;
+    background-color: #ABF3CD; /* ABF3CD */
 }
 
 ::-webkit-scrollbar-thumb {
@@ -7,11 +8,11 @@
     border-radius:8px;
     border:4px solid transparent;
     background-clip:content-box;
-    background-color:#484e51
+    background-color: #58D7DC; /* 58D7DC */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color:#555c60
+    background-color: #BBBAFD; /* BBBAFD */
 }
 
 * {
@@ -25,8 +26,8 @@
 }
 
 body {
-    background-color: #000000;
-    color: #FFF;
+    background-color: #FFFFFF; /* FFFFFF */
+    color: #946FB0; /* 946FB0 */
     font-family: sans-serif;
     /* overflow-x: hidden; */
 }
@@ -41,8 +42,7 @@ body {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0); /* Black w/ opacity */
     animation-name: fadeIn;
     animation-duration: 0.4s;
 }
@@ -52,21 +52,21 @@ body {
     position: absolute;
     top: 50%; right: 50%;
     transform: translate(50%,-50%);
-    background-color: #161616;
+    background-color: #FFFFFF; /* FFFFFF */
+    color: #946FB0; /* 946FB0 */
     width: 300px;
-    /* height: 1000px; */
     border-radius: 25px;
-    border: solid #FFF;
+    /* border: solid #ABF3CD; ABF3CD */
 }
 
 .modal-header {
     top: 0px;
-    background-color: #161616;
-    color: white;
+    background-color: #FFFFFF; /* FFFFFF */
+    color: #946FB0; /* 946FB0 */
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     padding: 16px;
-    border-bottom: solid #FFF;
+    border-bottom: solid #ABF3CD; /* ABF3CD */
 }
 
 .modal-header h2 {
@@ -76,7 +76,7 @@ body {
 }
 
 .edit-close {
-    color: white;
+    color: #946FB0; /* 946FB0 */
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -85,7 +85,7 @@ body {
 }
 
 .edit-close:hover, .edit-close:focus {
-    color: red;
+    color: #ffffff; /* BBBAFD */
     text-decoration: none;
     cursor: pointer;
 }
@@ -99,6 +99,7 @@ body {
     padding: 0;
     font-weight: bold;
     display: block;
+    color: #946FB0; /* 946FB0 */
 }
 
 .modal-body input {
@@ -109,17 +110,17 @@ body {
 .modal-body input[type="text"], select {
     width: 100%;
     border: none;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #ABF3CD; /* ABF3CD */
     background: transparent;
     outline: none;
     height: 40px;
-    color: #fff;
+    color: #000000; /* 58D7DC */
     font-size: 16px;
 }
 
 option {
-    background-color: #000000;
-    color: #FFF;
+    background-color: #FFFFFF; /* FFFFFF */
+    color: #946FB0; /* 946FB0 */
 }
 
 .modal-footer {
@@ -171,7 +172,6 @@ option {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
     animation-name: fadeIn;
     animation-duration: 0.4s;
@@ -187,9 +187,10 @@ option {
     width: 300px;
     height: 600px;
     position: absolute;
-    background-color: #161616;
+    background-color: #FFFFFF; /* FFFFFF */
+    color: #946FB0; /* 946FB0 */
     border-radius: 25px;
-    border: solid #FFF;
+    border: solid #ABF3CD; /* ABF3CD */
 
 }
 #contenido{
