--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,7 @@ html, body {
 }
 
 #calendario .dia-false {
-    background-color: #946FB0; /* 946FB0 */
+    background-color: #bbbafd77; /* 946FB0 */
 }
 
 /* ############ LAPTOP ########## */
