--- a/css/edit.css
+++ b/css/edit.css
@@ -42,7 +42,12 @@ body {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0,0,0,0); /* Black w/ opacity */
+    background: rgb(255, 255, 255);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
     animation-name: fadeIn;
     animation-duration: 0.4s;
 }
@@ -52,8 +57,12 @@ body {
     position: absolute;
     top: 50%; right: 50%;
     transform: translate(50%,-50%);
-    background-color: #FFFFFF; /* FFFFFF */
-    color: #946FB0; /* 946FB0 */
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: px solid rgba( 255, 255, 255, 0.18 );
     width: 300px;
     border-radius: 25px;
     /* border: solid #ABF3CD; ABF3CD */
@@ -61,12 +70,10 @@ body {
 
 .modal-header {
     top: 0px;
-    background-color: #FFFFFF; /* FFFFFF */
-    color: #946FB0; /* 946FB0 */
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     padding: 16px;
-    border-bottom: solid #ABF3CD; /* ABF3CD */
+    border-bottom: solid #946fb07c; /* ABF3CD */
 }
 
 .modal-header h2 {
@@ -110,7 +117,7 @@ body {
 .modal-body input[type="text"], select {
     width: 100%;
     border: none;
-    border-bottom: 1px solid #ABF3CD; /* ABF3CD */
+    border-bottom: 1px solid #ffffff; /* ABF3CD */
     background: transparent;
     outline: none;
     height: 40px;
@@ -164,126 +171,17 @@ option {
 
 /* ##################################################################################################################################### */
 
-.container-all {
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
-    animation-name: fadeIn;
-    animation-duration: 0.4s;
-    transition: all 600ms;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-  /* Modal Content */
-.popup {
-    width: 300px;
-    height: 600px;
+.star {
     position: absolute;
-    background-color: #FFFFFF; /* FFFFFF */
-    color: #946FB0; /* 946FB0 */
-    border-radius: 25px;
-    border: solid #ABF3CD; /* ABF3CD */
-
-}
-#contenido{
-    text-align: center;
-    /* width: 350px; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    top:0;
-}
-.img{
-    margin: 15px 0 5px 0;
-    width: 260px;
-    height: 260px;
-    background: #FFF;
-    object-fit: contain;
-    border-radius: 25px;
-}
-
-.titulo{
-    font-size: 20px;   
-    margin: 10px 0px 5px 0px;
-    
-}
-.precio{
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.container-text{
-    width: auto;
-    height: 210px;
-    overflow-y: auto;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    margin: 0 15px;
-    bottom: 17px;
-    font-size: 15px;
-}
-.container-text p{
-    font-size: 16px;
-}
-
-.btn-close-popup{
-    width: 40px;
-    height: 40px;
-    right: -20px;
-    top: -20px;
-    position: absolute;
-    background: linear-gradient(
-        45deg,
-        #f6019d,
-        #d40078,
-        #9700cc
-    );
-    color: white;
+    background-color: #000000;
+    width: 2px;
+    height: 2px;
     border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    font-size: 30px;
-    text-decoration: none;
-} 
-/* Add Animation */
-
-@keyframes fadeIn {
-    from {opacity: 0} 
-    to {opacity: 1}
+    z-index: 9999;
+    animation: moveStar 10s linear infinite;
 }
 
-@media screen and (min-width:992px) {
-    .popup {
-        width: 800px;
-        height: 440px;
-    }
-    #contenido{
-        width: 370px;
-        height: 440px;
-    }
-    .img{
-        width: 310px;
-        height: 310px;
-        margin: 0;
-    }
-    .container-text{
-        position: absolute;
-        font-size: 24px;
-        width: 400px;
-        height: 380px;
-        right: 25px;
-        top: 28px;
-        margin: 0;
-    }
+@keyframes moveStar {
+    0% { transform: translateY(0px); }
+    100% { transform: translateY(-100vh); }
 }
