--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,38 @@
+::-webkit-scrollbar {
+    width:16px
+}
+
+::-webkit-scrollbar-thumb {
+    height:56px;
+    border-radius:8px;
+    border:4px solid transparent;
+    background-clip:content-box;
+    background-color:#484e51
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color:#555c60
+}
+
 html, body {
     box-sizing: border-box;
-    height: 100%;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
     margin: 0;
     padding: 0;
     overflow-x: auto;
+    overflow-y: hidden;
     background-color: #FFFFFF;
     color: #946FB0;
     font-family: sans-serif;
-    backdrop-filter: blur(10px); /* Añade el efecto de desenfoque */
+    backdrop-filter: blur(2px); /* Añade el efecto de desenfoque */
+}
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 #contenedor-principal {
@@ -21,10 +46,9 @@ html, body {
     margin: auto;
     background: rgba(255, 255, 255, 0.1); /* Añade transparencia */
     border-radius: 10px; /* Añade bordes redondeados */
-    backdrop-filter: blur(10px); /* Añade el efecto de desenfoque */
+    backdrop-filter: blur(2px); /* Añade el efecto de desenfoque */
     border: 1px solid rgba(255, 255, 255, 0.2); /* Añade un borde */
 }
-
 
 #selector-consultorio, #calendario {
     width: 100%;
@@ -44,7 +68,7 @@ html, body {
     border: none;
     padding: 10px;
     font-size: 16px;
-    backdrop-filter: blur(10px); /* Añade el efecto de desenfoque */
+    backdrop-filter: blur(2px); /* Añade el efecto de desenfoque */
     border: 1px solid rgba(0, 0, 0, 0.2); /* Añade un borde */
     border-radius: 10px; /* Añade bordes redondeados */
 }
@@ -58,7 +82,7 @@ html, body {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(2px);
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
@@ -93,7 +117,7 @@ html, body {
     color: #000000;
     border: 1px solid rgba(187, 186, 253, 0.2); /* Añade un borde */
     font-size: 14px;
-    backdrop-filter: blur(10px); /* Añade el efecto de desenfoque */
+    backdrop-filter: blur(2px); /* Añade el efecto de desenfoque */
     border-radius: 10px; /* Añade bordes redondeados */
 }
 
@@ -125,21 +149,8 @@ a {
     text-decoration: none;
 }
 
-.star {
-    position: absolute;
-    background-color: #000000;
-    width: 2px;
-    height: 2px;
-    border-radius: 50%;
-    animation: moveStar 10s linear infinite;
-}
-
-@keyframes moveStar {
-    0% { transform: translateY(0px); }
-    100% { transform: translateY(-100vh); }
-}
-
-@media screen and (min-width:992px) {
+/* Estilos responsivos para pantallas más grandes */
+@media screen and (min-width: 992px) {
     #contenedor-principal {
         max-width: 600px; /* Aumenta el ancho máximo para pantallas más grandes */
     }
