--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,4 @@
 ::-webkit-scrollbar {
-    background-color: #ABF3CD; /* ABF3CD */
     width:16px
 }
 
@@ -8,11 +7,11 @@
     border-radius:8px;
     border:4px solid transparent;
     background-clip:content-box;
-    background-color: #58D7DC; /* 58D7DC */
+    background-color:#484e51
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #BBBAFD; /* BBBAFD */
+    background-color:#555c60
 }
 
 * {
@@ -25,11 +24,21 @@
     user-select: none; /* Standard */
 }
 
-body {
+html, body {
+    overflow-y: hidden;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
     background-color: #FFFFFF;
     color: #946FB0;
     font-family: sans-serif;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(2px);
+}
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 #home {
@@ -38,7 +47,7 @@ body {
     align-items: center;
     height: 90vh;
     background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(2px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 10px;
 }
@@ -62,7 +71,7 @@ body {
     color: #946FB0;
     box-sizing: border-box;
     padding: 70px 30px;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(2px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 10px;
 }
@@ -99,12 +108,12 @@ body {
 .login-box input[type="text"], .login-box input[type="password"] {
     border: none;
     border-bottom: 1px solid #ABF3CD;
-    color: #58D7DC;
+    color: #00000071;
     background: rgba(255, 255, 255, 0.1);
     outline: none;
     height: 40px;
     font-size: 16px;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(2px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 10px;
 }
@@ -132,21 +141,6 @@ body {
     transform: scale(1.05);
     color: #000;
 }
-
-.star {
-    position: absolute;
-    background-color: #000000;
-    width: 2px;
-    height: 2px;
-    border-radius: 50%;
-    animation: moveStar 10s linear infinite;
-}
-
-@keyframes moveStar {
-    0% { transform: translateY(0px); }
-    100% { transform: translateY(-100vh); }
-}
-
 
 /* ############ LAPTOP ########## */
 
