--- a/public/css/personas.css
+++ b/public/css/personas.css
@@ -1,13 +1,37 @@
+::-webkit-scrollbar {
+    width:16px
+}
+
+::-webkit-scrollbar-thumb {
+    height:56px;
+    border-radius:8px;
+    border:4px solid transparent;
+    background-clip:content-box;
+    background-color:#484e51
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color:#555c60
+}
+
 html, body {
     box-sizing: border-box;
-    height: 100%;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
     margin: 0;
     padding: 0;
     overflow-x: auto;
     background-color: #FFFFFF;
     color: #946FB0;
     font-family: 'Poppins', sans-serif;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(2px);
+}
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 #contenedor-principal {
@@ -16,7 +40,7 @@ html, body {
     box-sizing: border-box;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(2px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     margin-left: auto; /* Centra horizontalmente */
     margin-right: auto; /* Centra horizontalmente */
@@ -57,7 +81,7 @@ html, body {
     color: #000000;
     border: none;
     padding: 8px;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(2px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 10px;
 }
@@ -103,18 +127,4 @@ html, body {
 #contenedor-principal table th:nth-child(5), #contenedor-principal table td:nth-child(5) {
     /* Ajusta el ancho de la columna Ocupación */
     max-width: 50%;
-}
-
-.star {
-    position: absolute;
-    background-color: #000000;
-    width: 2px;
-    height: 2px;
-    border-radius: 50%;
-    animation: moveStar 10s linear infinite;
-}
-
-@keyframes moveStar {
-    0% { transform: translateY(0px); }
-    100% { transform: translateY(-100vh); }
 }
